--- a/index.html
+++ b/index.html
@@ -6,18 +6,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
-  <title>Frontend Developer</title>
+  <title>Bookmarkf</title>
 </head>
 <body>
 <!-- HEADER -->
   <header class="site_header">
-
+    <div class="container">
+    <nav class="sitenav">
+      <img src="img/logo-bookmark.svg" alt="Logo of bookmark" width="149" height="25">
+      <ul class="sitenav__list">
+        <li class="sitenav__list-item">FEATURES</li>
+        <li class="sitenav__list-item">PRICING</li>
+        <li class="sitenav__list-item">CONTACT</li>
+        <li class="sitenav__list-item button">LOGIN</li>
+      </ul>
+    </nav>
+    </div>
   </header>
 
 <!-- MAIN -->
   <main class="main">
+    <section class="downloud">
+      <h2 class="downloud__heading">Download the extension</h2>
+      <p class="donwloud__text"></p>
 
+      <ul class="downloud__list">
+        <li class="downloud__item">
+          <img src="#" alt="" class="downloud__img">
+          <h3 class="downloud__heading"></h3>
+          <p class="downloud__list__text"></p>
+          <a href="" class="extensions__link"></a>
+        </li>
+      </ul>
+    </section>
   </main>
 
 
