--- a/index.html
+++ b/index.html
@@ -9,19 +9,35 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
-  <title>Bookmarkf</title>
+  <title>Bookmark</title>
 </head>
 <body>
 <!-- HEADER -->
   <header class="site_header">
     <div class="container">
     <nav class="sitenav">
-      <img src="img/logo-bookmark.svg" alt="Logo of bookmark" width="149" height="25">
+      <a href="index.html"><img src="img/logo-bookmark.svg" alt="Logo of bookmark" width="149" height="25"></a>
       <ul class="sitenav__list">
-        <li class="sitenav__list-item">FEATURES</li>
-        <li class="sitenav__list-item">PRICING</li>
-        <li class="sitenav__list-item">CONTACT</li>
-        <li class="sitenav__list-item button">LOGIN</li>
+        <li class="sitenav__list-item">
+          <a class="sitenav__link" href="index.html">Features
+
+          </a>
+        </li>
+        <li class="sitenav__list-item">
+          <a class="sitenav__link" href="index.html">Pricing
+
+          </a>
+        </li>
+        <li class="sitenav__list-item">
+          <a class="sitenav__link" href="index.html">Contact
+
+          </a>
+        </li>
+        <li class="sitenav__list-item">
+          <a class="sitenav__link  button" href="index.html">Login
+
+          </a>
+        </li>
       </ul>
     </nav>
     </div>
@@ -29,19 +45,35 @@
 
 <!-- MAIN -->
   <main class="main">
-    <section class="downloud">
-      <h2 class="downloud__heading">Download the extension</h2>
-      <p class="donwloud__text"></p>
+    <div class="container">
+      <!-- HERO -->
+      <section class="sitehero">
+        <h2 class="sitehero__heading">
+          A Simple Bookmark Manager
+        </h2>
+        <p class="sitehero__text">
+          A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.
+        </p>
+        <div class="sitehero__link-wraper">
+          <a class="sitenav__link" href="index.html">Get it on Chrome</a>
+          <a class="sitenav__link" href="index.html">Get it on Firefox</a>
+        </div>
+      </section>
 
-      <ul class="downloud__list">
-        <li class="downloud__item">
-          <img src="#" alt="" class="downloud__img">
-          <h3 class="downloud__heading"></h3>
-          <p class="downloud__list__text"></p>
-          <a href="" class="extensions__link"></a>
-        </li>
-      </ul>
-    </section>
+
+      <section class="downloud">
+        <h2 class="downloud__heading">Download the extension</h2>
+        <p class="donwloud__text"></p>
+        <ul class="downloud__list">
+          <li class="downloud__item">
+            <img src="#" alt="" class="downloud__img">
+            <h3 class="downloud__heading"></h3>
+            <p class="downloud__list__text"></p>
+            <a href="" class="extensions__link"></a>
+          </li>
+        </ul>
+      </section>
+    </div>
   </main>
 
 
