--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
     <div class="container">
       <!-- HERO -->
       <section class="sitehero">
-        <h2 class="sitehero__heading">
-          A Simple Bookmark Manager
-        </h2>
-        <p class="sitehero__text">
-          A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.
-        </p>
-        <div class="sitehero__link-wraper">
-          <a class="sitenav__link" href="index.html">Get it on Chrome</a>
-          <a class="sitenav__link" href="index.html">Get it on Firefox</a>
+        <div class="hero__left">
+          <h2 class="sitehero__heading">
+            A Simple Bookmark Manager
+          </h2>
+          <p class="sitehero__text">
+            A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.
+          </p>
+          <div class="sitehero__link-wraper">
+            <a class="sitenav__link" href="index.html">Get it on Chrome</a>
+            <a class="sitenav__link" href="index.html">Get it on Firefox</a>
+          </div>
         </div>
       </section>
 
