Add extention html

--- a/index.html
+++ b/index.html
@@ -64,14 +64,35 @@
 
 
       <section class="downloud">
-        <h2 class="downloud__heading">Download the extension</h2>
-        <p class="donwloud__text"></p>
-        <ul class="downloud__list">
-          <li class="downloud__item">
-            <img src="#" alt="" class="downloud__img">
-            <h3 class="downloud__heading"></h3>
-            <p class="downloud__list__text"></p>
-            <a href="" class="extensions__link"></a>
+        <ul class="extensions__list">
+          <li class="extensions__item extension" style="--i: 0">
+            <div class="extension__info">
+              <img class="extension__logo" src="./img/logo-chrome.svg" width="102" height="100" alt="Chrome logo">
+              <h3 class="extension__title">Add to Chrome</h3>
+              <p class="extension__version paragraph">Minimum version 62</p>
+            </div>
+
+            <a class="btn btn--block" href="https://chrome.google.com/webstore" target="_blank">Add & Install Extension</a>
+          </li>
+
+          <li class="extensions__item extension" style="--i: 1">
+            <div class="extension__info">
+              <img class="extension__logo" src="./img/logo-firefox.svg" width="105" height="100" alt="Firefox logo">
+              <h3 class="extension__title">Add to Firefox</h3>
+              <p class="extension__version paragraph">Minimum version 55</p>
+            </div>
+
+            <a class="btn btn--block" href="https://addons.mozilla.org/en-US/firefox" target="_blank">Add & Install Extension</a>
+          </li>
+
+          <li class="extensions__item extension" style="--i: 2">
+            <div class="extension__info">
+              <img class="extension__logo" src="./img/logo-opera.svg" width="96" height="100" alt="Opera logo">
+              <h3 class="extension__title">Add to Opera</h3>
+              <p class="extension__version paragraph">Minimum version 46</p>
+            </div>
+
+            <a class="btn btn--block" href="https://addons.opera.com/en/extensions" target="_blank">Add & Install Extension</a>
           </li>
         </ul>
       </section>
